css/stylem.css
/* General Rules */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
body {
  font-family: work sans;
}
:root {
  --mainColor: #10cab7;
  --secondaryColor: #2c4755;
  --specialHeadingColor: #bbb; /* Special heading  */
  --specialPaColor: #808080; /* For paragraphs after special heading */
  --sectionPadding: 20px;
  --p_Color: #777;
  --p_LineHeight: 1.6;
  --backgroundColor: #f6f6f6;
  --secBackgroundColor : white;
  --transitionDur : 0.5s;
  --h3Color: #333

}
HTML {
  scroll-behavior: smooth;
}

/* Extra of extra haha small devices (phones, 300px and down) */
@media (max-width: 300px) {
  .features .container {
    grid-auto-columns: repeat(auto-fill, minmax(auto, auto));
  }
}
/* Extra small devices (phones, 600px and down) */
@media (max-width: 600px) {
  .container {
    width: 100%;
  }
  .features .container .feat:last-child {
    padding-bottom: 20px;
  }
  .container .speacial_heading {
    font-size: 60px;
  }
  .container .speacial_heading + p {
    font-size: 16px;
    margin-top: -15px;
  }
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media (min-width: 600px) {
  .container {
    width: 100%;
  }
}
/* Medium devices (landscape tablets, 768px and up) */
@media (min-width: 768px) {
  .container {
    width: 90%;
  }
}
/* Large devices (laptops/desktops, 992px and up) */
@media (min-width: 992px) {
  .container {
    width: 80%;
  }
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media (min-width: 1200px) {
  .container {
    width: 80%;
  }
}
/* ENd of general Rules */

/* Start Components RUles */
.speacial_heading {
  font-size: 100px;
  text-align: center;
  margin: 0;
  color: var(--specialHeadingColor);
  font-weight: 800;
  letter-spacing: -1.5px;
  opacity: 0.6;
}
.speacial_heading + p {
  font-size: 20px;
  text-align: center;
  padding: 0;
  margin: -24px 0 0;
  color: var(--specialPaColor);
}
/* Start Components RUles */

/* header start */
.header {
  padding: 10px;
  background-color: var(--secBackgroundColor) ;
}
.header .container {
  display: flex;
  margin-left: auto;
  margin-right: auto;
  justify-content: space-between;
  align-items: center;
  
}
.logo img {
  width: 60px;
}
.header .links {
  position: relative; /* So we can move it easily */
  z-index: 1;
}
.header .links .icon {
  /* Drawing the icon ;) */
  display: flex;
  flex-wrap: wrap;
  width: 30px;
  justify-content: flex-end;
  transition-duration: var(--transitionDur);
}
.header .links .icon span {
  background-color: var(--h3Color);
  margin-bottom: 4px;
  height: 2px;
}
.header .links .icon span:first-child {
  width: 100%;
}
.header .links .icon span:nth-child(2) {
  width: 60%;
  transition-duration: var(--transitionDur);
}
.header .links .icon span:last-child {
  width: 100%;
}
.header .links:hover .icon span:nth-child(2) {
  width: 100px;
}
.header .links ul {
  margin: 0;
  padding: 0;
  list-style: none;
  background-color: var(--backgroundColor);
  min-width: 250px;
  position: absolute;
  right: 0;
  top: calc(100% + 15px);
  display: none;
}
.header .links ul::before {
  content: "";
  position: absolute;
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent var(--backgroundColor) transparent;
  right: 5px;
  top: -20px;
}
.header .links:hover ul {
  display: block;
}
.header .links ul li a {
  display: block;
  text-decoration: none;
  padding: 15px;
  color: var(--h3Color);
  transition: padding-left var(--transitionDur);
}
.header .links ul li:not(:last-child) a {
  border-bottom: 1px solid var(--backgroundColor);
}
.header .links ul li a:hover {
  padding-left: 25px;
}
/* End header */

/* Start Landing section */
.landing {
  background-image: url(../images/background1.jpg);
  background-size: cover;
  height: calc(100vh - 64px); /* 64px is the height of the nav bar*/
  position: relative;
}
.landing .text-intro {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  width: 320px;
  max-width: 100%;
}
.landing .text-intro h1 {
  color: var(--mainColor);
  margin: 0;
  font-size: 50px;
  width: 320px;
  max-width: 100%;
  font-weight: bold;
}
.landing p {
  font-size: 19px;
  color: var(--h3Color);
  font-weight: bold;
  line-height: 1.3;
}
/* end Landing section */

/* Start Features Section */
.features {
  margin: 0;
  background-color: var(--backgroundColor);
}
.features .container {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 20px;
  margin: 1px;
  padding: 20px;
}
.features .container .feat {
  text-align: center;

}

.features .container .feat .icon {
  color: var(--mainColor);
}
.features .container .feat h3 {
  color: var(--h3Color);
  font-weight: bold;
  margin-top: 18, 72px;
}
.features .container .feat p {
  color: var(--p_Color);
  font-size: 18px;
  line-height: var(--p_LineHeight);
}
/* End Features Section */

/* Start services Section */
.services_section {
  margin: 0 auto;
  padding-bottom: var(--sectionPadding);
  padding-top: var(--sectionPadding);
  background-color: var(--secBackgroundColor) ;
}
.services_section .container {
  
  margin: 0 auto;
  padding: var(--sectionPadding) 0; /* DO I really need this :) . */
}
.service_content .container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 30px;
  margin: 1px auto;
}
.service_content .container .col {
  grid-template-rows: 2;
}
.service_content .container .col .srv {
  display: flex;
  margin: 20px;
}
@media (max-width: 700px) {
  .srv {
    flex-direction: column;
    text-align: center;
  }
}
.srv i {
  color: var(--mainColor);
  flex-basis: 60px;
}
.service_content .container .col .srv .text {
  flex: 1;
}
.srv .text h3 {
  margin: 0;
  color: var(--h3Color);
}
.srv .text p {
}
.service_content .container .col .image_in_service_content {
  text-align: center;
  position: relative;
  /* display: none;  */
}
.service_content .container .col .image_in_service_content::before {
  content: "";
  background-color: var(--secondaryColor);
  position: absolute;
  width: 70px;
  right: 17.5px;
  height: calc(100% + 35px);
  z-index: -1;
}
.col .image_in_service_content img {
  width: 265px;
  height: 265px;
  padding-top: 35px;
}
@media (max-width: 1199px) {
  .image_in_service_content {
    display: none;
  }
}
/* End services Section */

/* Start Portfolio Section */
.potfolio_section {
  margin: 0 auto;
  padding-top: var(--sectionPadding);
  padding-bottom: var(--sectionPadding);
  background-color: var(--backgroundColor);
}
.potfolio_section .container {
  margin: 0 auto;
  padding-bottom: var(--sectionPadding);
  padding-top: var(--sectionPadding);
  
}
.potfolio_content {
  margin: 0 auto;
  padding: 0;
}
.potfolio_content .container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 30px;
  margin: 1px auto;
}
.potfolio_content .container .card {
  background-color: white;
  margin: 10px;
  padding: 0;
}
.potfolio_content .container .card img {
  width: 100%;
  height: 300px;
}
.potfolio_content .container .card .card_info {
  margin: 0;
  padding: 20px;
  background-color: var(--secBackgroundColor) ;
}
.potfolio_content .container .card .card_info h3 {
  margin: 0;
  text-align: center;
  color: var(--h3Color);
}
.potfolio_content .container .card .card_info p {
  margin: 0;
  padding: 10px 0 0;
  color: var(--p_Color);
  line-height: var(--p_LineHeight);
}
/* End Portfolio Section */

/* Start About Section */
.about_section {
  margin: 0;
  /* padding: 0; */
  padding-top: var(--sectionPadding);
  padding-bottom: var(--sectionPadding);
  background-color: var(--secBackgroundColor) ;
}
.about_section .container {
  margin: 0 auto;
  padding-top: var(--sectionPadding);
  padding-bottom: var(--sectionPadding);
}
.About_content {
  margin: 0;
  padding: 0;
}
.About_content .container {
  display: flex;
  align-items: center;
}
.about_section .About_content .container .image {
  width: 300px;
  position: relative;
  margin-right: 80px;
  margin-top: 20px;
}
.about_section .About_content .container .image::before {
  content: "";
  position: absolute;
  width: 80px;
  top: -20px;
  left: -40px;
  height: calc(168.83px + 40px); /*168.83px is the height of the pic*/
  background-color: var(--specialHeadingColor);
  z-index: -1;
}
.about_section .About_content .container .image::after {
  content: "";
  position: absolute;
  width: 44px;
  height: 118px;
  border-left: 80px solid var(--mainColor);
  border-bottom: 48px solid var(--mainColor);
  right: -70px;
  z-index: -1;
  top: -19px;
}
.about_section .About_content .container .image img {
  width: 300px;
}
.about_section .About_content .container .text {
  padding: 0 20px;
}
.about_section .About_content .container .text p:first-of-type {
  font-weight: bold;
  margin: 0;
  margin-bottom: 10px;
  line-height: 2;
  color: var(--p_Color);
}
.about_section .About_content .container .text hr {
  width: 50%;
  margin-left: 0;
  border-color: var(--mainColor);
}
.about_section .About_content .container .text p:last-of-type {
  margin: 0;
  color: var(--p_Color);
  line-height: var(--p_LineHeight);
}
@media (max-width: 991px) {
  .About_content .container {
    flex-direction: column;
  }
  .about_section .About_content .container .image {
    margin: 40px;
  }
  .about_section .About_content .container .image::after {
    display: none;
  }
}
/* End About Section */

/* Start Contact Section */
.contact_section {
  margin: 0 auto;
  padding-top: var(--sectionPadding);
  padding-bottom: var(--sectionPadding);
  background-color: var(--backgroundColor);
}
.contact_section .container {
  margin: 0 auto;
  padding-bottom: var(--sectionPadding);
  padding-top: var(--sectionPadding);
}
.contact_content {
  margin: 0 auto;
  padding: var(--sectionPadding);
  margin-bottom: var(--sectionPadding) ;
}
.contact_content .container {
  padding: 20px;
  background-color: var(--secondaryColor);
  border-radius: 25% 3% 25%;
}
.contact_content .container .text {
  font-size: 40px;
  font-weight: bold;
  color: white;
  letter-spacing: -2px;
  padding: 10px 20px;
  border-radius: 24%
}
.contact_content .container .link {
  font-size: 35px;
  text-decoration: none;
  color: var(--mainColor);
  font-weight: bold;
  padding: var(--sectionPadding) var(--sectionPadding);
}
.contact_content .container .social {
      font-size: 19px;
      color: var(--p_Color);
      padding: var(--sectionPadding);
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-end;
}
.contact_content .container .social i {
  margin-right: 3px ;
  margin-left: 3px ;
}
.contact_content .container .social i:hover  {
  color: var(--mainColor);
}
@media (max-width: 700px) {
  .contact_content .container .text {
    font-size: 150%;
  }
  .contact_content .container .link {
    font-size: 120%;
  }
  .contact_content .container .social {
    font-size: 110%;
}
}
/* End Contact Section */
/* Star Footer */
.footer {
  background-color: var(--secondaryColor);
}
.footer .container {
  padding: 0 var(--sectionPadding);
  display: flex;
  justify-content: space-between;
  margin-right: auto;
  margin-left: auto;
}
.footer .container p {
  color: white;
  
}
.footer .container p:nth-child(2) span {
  font-weight: bold;
  color: var(--mainColor);
}
/* End Footer */

